# TugasLOGIKA

./: .gitignore  IMPLEMENTATION_COMPLETE.md  README.md
traffic-simulation-idn/: .env.example  .gitignore  ARCHITECTURE_DIAGRAM.md  AUTO_LOG_DELETION_IMPLEMENTATION.md  AUTO_LOG_DELETION_INDEX.md  AUTO_LOG_DELETION_VISUAL.md  BACKGROUND_CLEANUP_README.md  CHANGES_SUMMARY.md  CLEANUP_SUMMARY.md  CODE_CHANGES_VIOLATION_TIER.md  COMPLIANCE_WITH_INDONESIAN_LAW.md  COMPREHENSIVE_TEST_REPORT.md  CORRECT_FLOW_FIX_COMPLETE.md  CORRECT_FLOW_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT_CHECKLIST.txt  DOCUMENTATION_CHECKLIST.md  DOCUMENTATION_COMPLETE_SUMMARY.txt  DOCUMENTATION_DELIVERY_SUMMARY.txt  DOCUMENTATION_FILES_INDEX.md  DOCUMENTATION_FIX_FINAL_SUMMARY.md  DOCUMENTATION_FIX_VISUAL.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_UPDATE_REPORT.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  ENHANCED_NIK_IMPLEMENTATION_SUMMARY.txt  FILES_CREATED.md  FINAL_FIX_VERIFICATION.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_STATUS.txt  FINAL_VALIDATION_REPORT.md  FINE_AMOUNTS_REFERENCE.md  FIVE_SENSOR_COMPLETE.txt  FIVE_SENSOR_GUI_INTERFACE.md  FIVE_SENSOR_IMPLEMENTATION_COMPLETE.md  FIVE_SENSOR_PROJECT_SUMMARY.md  FIVE_SENSOR_QUICK_START.md  FIVE_SENSOR_VISUAL_GUIDE.md  GUI_CLEANUP_FIX.md  GUI_FIXES_COMPLETE.md  (+153 more)
traffic-simulation-idn/config/: __init__.py  api_config.py  database.py  gui_config.py  logging_config.py  settings.py
traffic-simulation-idn/dashboard/: __init__.py  display.py
traffic-simulation-idn/data_files/: statistics.csv  tickets.json  traffic_data.json  worker_status.json
traffic-simulation-idn/data_models/: __init__.py  models.py  storage.py
traffic-simulation-idn/docs/: 00_TASK_COMPLETE.md  API_DOCUMENTATION.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_2026_01_31.md  CHANGES_CHANGELOG_2026_01_30.md  CONSOLIDATION_COMPLETE.md  (+38 more)
(+53 files in other folders)
